cabal-version:      3.4

name:               new-project
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
build-type:         Simple

common warnings
    ghc-options: -Wall

executable Haskell
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17,
                      time ^>=1.9
    hs-source-dirs:   app
    default-language: Haskell2010
